--- a/style.css
+++ b/style.css
@@ -7,8 +7,11 @@
 
 body {
   margin-top: 5%;
-  margin-left: 10%;
+  margin-left: 25%;
+  margin-right: 25%;
   background-color: ##f7f7f7;
+  font-size: 1.2rem;
+  text-align: justify;
   font-family: 'Rubik', 'Helvetica', sans-serif;
 }
 
