--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ html {
 }
 
 body {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 10%;
+  margin-bottom: 10%;
   margin-left: auto;
   margin-right: auto;
   max-width: 800px;
-  background-color: ##f7f7f7;
+  background-color: #f7f7f7;
   font-size: 1.3rem;
   text-align: justify;
   font-family: 'Rubik', 'Helvetica', sans-serif;
