--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: iA;
-  src: url("fonts/iAWriterDuoS-Italic.woff2");
-}
-
 .lineheight {
   line-height: 1.5em;
 }
@@ -25,6 +20,8 @@
 html {
   padding-left: 7.5%;
   padding-right: 7.5%;
+  background-color: var(--background-light);
+  transition: background-color 0.3s;
 }
 
 body {
@@ -33,25 +30,28 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 800px;
-  background-color: var(--background-light);
   font-size: 1.3rem;
   text-align: left;
   font-family: 'Rubik', 'Helvetica', sans-serif;
   color: var(--text-light);
-  transition: background-color 0.3s, color 0.3s;
+  transition: color 0.3s;
 }
 
 /* Apply dark theme colors when user's system prefers a dark color scheme */
 @media (prefers-color-scheme: dark) {
-  body {
+  html {
     background-color: var(--background-dark);
+  }
+  body {
     color: var(--text-dark);
   }
 }
 
 /* Apply dark theme colors when the 'dark-mode' class is added to the body */
-body.dark-mode {
+html.dark-mode {
   background-color: var(--background-dark);
+}
+body.dark-mode {
   color: var(--text-dark);
 }
 
