--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ body {
   transition: color 0.3s;
 }
 
+@media (min-width: 600px) {
+  body {
+    text-align: justify;
+  }
+}
+
 /* Apply dark theme colors when user's system prefers a dark color scheme */
 @media (prefers-color-scheme: dark) {
   html {
